--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -50,7 +50,7 @@
                               th:text="${#numbers.formatCurrency(product.getSalePrice())}"></span>
                     </span>
 
-                    <div sec:authorize="isAuthenticated()" class="text-info text-gradient font-weight-bolder" th:text="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.gradeName + ' 등급 혜택'}"></div>
+                    <div th:if="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.isEmailVerified()}" sec:authorize="isAuthenticated()" class="text-info text-gradient font-weight-bolder" th:text="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.gradeName + ' 등급 혜택'}"></div>
                     <p sec:authorize="isAuthenticated()" class="my-auto" th:if="${!product.isSale() && #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.isEmailVerified()}">
                         <span class="text-dark text-muted">구매 확정시</span>
                         <span class="text-primary text-gradient font-weight-bolder text-lg" th:text="${#numbers.formatInteger((product.productPrice * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 3, 'COMMA')}"></span>
@@ -72,7 +72,7 @@
                         <span th:text="${product.productStock + '개 남음'}"></span>
                     </p>
 
-                    <form action="#" th:action="@{/order/direct}" method="post" class="row row-cols-lg-auto g-3 my-auto">
+                    <form action="#" sec:authorize="isAuthenticated()" th:if="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.isEmailVerified()}" th:action="@{/order/direct}" method="post" class="row row-cols-lg-auto g-3 my-auto">
                         <input type="hidden" name="productId" id="productId" th:value="${product.id}"/>
                         <div class="col-12 align-items-center">
                             <label class="visually-hidden" for="quantity">수량</label>
@@ -93,6 +93,16 @@
                         </div>
 
                     </form>
+
+                    <span sec:authorize="isAnonymous()">
+                        <a role="button" class="btn btn-primary bg-gradient" href="/login">로그인 하여 구입하기</a>
+                    </span>
+                    <span sec:authorize="isAuthenticated()"
+                          th:if="${!#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.isEmailVerified()}">
+                        주문을 하기 위해서는 이메일 인증이 필요합니다.
+                    </span>
+
+
                 </div>
             </div>
 
