feat: 메인 화면 수정

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -159,14 +159,14 @@
                                 </li>
                             </ul>
 
-                            <ul class="navbar-nav ms-auto">
-                                <li class="nav-item">
-                                    <form th:action="@{/search/product}" class="form-inline" method="get">
-                                        <input class="form-control me-lg-8 text-center" name="keyword" type="search"
-                                               placeholder="상품 검색"/>
-                                    </form>
-                                </li>
-                            </ul>
+<!--                            <ul class="navbar-nav ms-auto">-->
+<!--                                <li class="nav-item">-->
+<!--                                    <form th:action="@{/search/product}" class="form-inline" method="get">-->
+<!--                                        <input class="form-control me-lg-8 text-center" name="keyword" type="search"-->
+<!--                                               placeholder="상품 검색"/>-->
+<!--                                    </form>-->
+<!--                                </li>-->
+<!--                            </ul>-->
 
                             <ul class="navbar-nav navbar-nav-hover mx-auto" sec:authorize="isAuthenticated()">
                                 <li class="nav-item dropdown dropdown-hover mx-2">
