--- a/src/main/resources/templates/seller/edit-product.html
+++ b/src/main/resources/templates/seller/edit-product.html
@@ -200,7 +200,7 @@
 
                         croppie = new Croppie(img, {
                             viewport: {width: 240, height: 160},
-                            // boundary: {width: 300, height: 300}
+                            enableResize: true
                         });
 
 
