feat: 장바구니 및 주문 기능 개선

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -382,6 +382,13 @@
                                 <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">로그인</button>
                             </div>
                         </form>
+                        <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                            <p class="mb-4 mt-4 text-sm mx-auto">
+                                아직 계정이 없으시다면
+                                <a href="#" th:href="@{/sign-up}"
+                                   class="text-info text-gradient font-weight-bold">가입하기</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
