--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -25,7 +25,7 @@
                                       method="post" novalidate>
 
                                     <div class="form-group">
-                                        <label for="nickname">닉네임</label>
+                                        <label for="nickname">닉네임(*)</label>
                                         <input id="nickname" type="text" class="form-control" placeholder="닉네임"
                                                aria-describedby="nicknameHelp"
                                                th:field="*{nickname}"
@@ -39,7 +39,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="email">이메일</label>
+                                        <label for="email">이메일(*)</label>
                                         <input id="email" type="email" th:field="*{email}" class="form-control"
                                                placeholder="your@email.com"
                                                aria-describedby="emailHelp" required/>
@@ -52,19 +52,33 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="password">비밀번호</label>
+                                        <label for="password">비밀번호(*)</label>
                                         <input id="password" type="password" th:field="*{password}" class="form-control"
-                                               placeholder="password" required minlength="8" maxlength="50"/>
+                                               placeholder="비밀번호" required minlength="8" maxlength="50"/>
                                         <small id="passwordHelp" class="form-text text-muted">
                                             8자 이상 50자 이내로 입력하세요. 영문자, 숫자, 특수기호를 사용할 수 있으며 공백은 사용할 수 없습니다.
                                         </small>
-                                        <small class="invalid-feedback">패스워드를 입력하세요.</small><br/>
+                                        <small class="invalid-feedback">비밀번호를 입력하세요.</small><br/>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}"
                                                th:errors="*{password}"></small>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="city">도시</label>
+                                        <label for="passwordConfirm">비밀번호 확인(*)</label>
+                                        <input id="passwordConfirm" type="password" th:field="*{passwordConfirm}" class="form-control"
+                                               placeholder="비밀번호 확인" required minlength="8" maxlength="50"/>
+                                        <small id="passwordConfirmHelp" class="form-text text-muted">
+                                            비밀번호를 한번 더 입력하세요.
+                                        </small>
+                                        <small class="invalid-feedback">비밀번호를 한번 더 입력하세요.</small><br/>
+                                        <small class="form-text text-danger" th:if="${#fields.hasErrors('passwordConfirm')}"
+                                               th:errors="*{passwordConfirm}"></small>
+                                    </div>
+
+
+
+                                    <div class="form-group">
+                                        <label for="city">도시(*)</label>
                                         <input id="city" type="text" th:field="*{address.city}" class="form-control" placeholder="city" required/>
                                         <small id="cityHelp" class="form-text text-muted">
                                             살고 계신 도시 이름을 적어주세요.
@@ -75,7 +89,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="city">거리</label>
+                                        <label for="city">거리(*)</label>
                                         <input id="street" type="text" th:field="*{address.street}" class="form-control" placeholder="street" required/>
                                         <small id="streetHelp" class="form-text text-muted">
                                             거리 이름을 적어주세요.
@@ -86,7 +100,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="city">우편번호</label>
+                                        <label for="city">우편번호(*)</label>
                                         <input id="zipcode" type="text" th:field="*{address.zipcode}" class="form-control" placeholder="zipcode" required/>
                                         <small id="zipcodeHelp" class="form-text text-muted">
                                             우편 번호를 적어주세요.
@@ -138,13 +152,11 @@
             </div>
             <!-- BODY -->
             <div class="modal-body">
-                약관에 동의 ㄱㄱ
+                약관입니다.
             </div>
             <!-- FOOTER -->
             <div class="modal-footer">
                 <button type="button" class="btn bg-gradient-secondary" data-bs-dismiss="modal">닫기
-                </button>
-                <button type="button" class="btn bg-gradient-primary" data-bs-dismiss="modal">동의
                 </button>
             </div>
         </div>
