--- a/src/main/resources/templates/shopping-bag/list.html
+++ b/src/main/resources/templates/shopping-bag/list.html
@@ -18,8 +18,9 @@
 </header>
 
 <div class="row">
-    <div class="container col-md-10">
+    <div class="container col-md-10" th:if="${orderedList.size() > 0}">
         <div class="card">
+            <h2 class="card-title text-center">주문 확정 전 목록</h2>
             <div class="table-responsive">
                 <table class="table align-items-center mb-0">
                     <thead>
@@ -32,10 +33,90 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="shoppingBag : ${shoppingBagList}">
+                    <tr th:each="shoppingBag : ${orderedList}">
                         <td>
                             <div class="d-flex px-2 py-1">
-                                <div class="form-check">
+                                <div>
+                                    <img th:src="${shoppingBag.productImage}"
+                                         class="avatar avatar-sm me-3">
+                                </div>
+                                <div class="d-flex flex-column justify-content-center">
+                                    <h6 class="mb-0 text-xs" th:text="${shoppingBag.productName}">상품 이미지</h6>
+
+                                    <p th:if="${!shoppingBag.isSale()}" class="text-xs text-secondary mb-0"
+                                       th:text="${#numbers.formatCurrency(shoppingBag.productPrice)}">
+                                    </p>
+
+                                    <span th:if="${shoppingBag.isSale()}" class="text-xs mb-0">
+                                        <del class="text-secondary"
+                                             th:text="${#numbers.formatCurrency(shoppingBag.productPrice)}"></del>
+                                        <span class="text-danger text-secondary"
+                                              th:text="${'-' +  shoppingBag.saleRate + '%'}"></span>
+                                        <span class="d-block text-darker"
+                                              th:text="${#numbers.formatCurrency(shoppingBag.salePrice)}"></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </td>
+
+                        <td>
+                            <p class="text-xs font-weight-bold mb-0" th:text="${shoppingBag.shoppingBagQuantity + '개'}">
+                                수량
+                            </p>
+                            <p class="text-xs text-secondary mb-0"
+                               th:text="${#numbers.formatCurrency(shoppingBag.getTotalPrice())}">
+                                총 가격
+                            </p>
+                        </td>
+
+                        <td>
+                            <p class="text-xs text-bolder mb-0"
+                               th:text="${#numbers.formatInteger((shoppingBag.getTotalPrice() * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 3, 'COMMA') + ' 포인트'}">
+                                적립 포인트
+                            </p>
+                        </td>
+
+                    </tr>
+                    </tbody>
+                </table>
+
+                <div class="card-footer text-center">
+                    <h5 class="mt-3 mb-1 d-md-block">합계 :
+                        <span class="h5 mb-0 text-lg font-weight-bolder text-primary text-gradient text-uppercase"
+                              th:text="${#numbers.formatCurrency(orderedTotalPrice)}">
+                        </span>
+                    </h5>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="row mt-4" th:if="${standByList.size() > 0}">
+    <div class="container col-md-10">
+        <div class="card">
+            <h2 class="card-title text-center">주문 전 목록</h2>
+            <div class="table-responsive">
+                <table class="table align-items-center mb-0">
+                    <thead>
+                    <tr>
+                        <th class="text-uppercase text-secondary text-lg font-weight-bolder">상품 정보</th>
+                        <th class="text-uppercase text-secondary text-lg font-weight-bolder ps-2">수량 / 가격</th>
+                        <th class="text-uppercase text-secondary text-lg font-weight-bolder ps-2">적립 예정 포인트</th>
+                        <th class="text-uppercase text-secondary text-lg font-weight-bolder ps-2"></th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="shoppingBag : ${standByList}">
+                        <td>
+                            <div class="d-flex px-2 py-1">
+                                <div class="form-check"
+                                     th:if="${shoppingBag.status.equals(T(io.twosom.ecommerce.shoppingbag.ShoppingBagStatus).STANDBY)}">
                                     <input type="checkbox" id="shoppingBagId" th:value="${shoppingBag.shoppingBagId}"
                                            class="form-check-input"/>
                                 </div>
@@ -92,7 +173,7 @@
                 <div class="card-footer text-center">
                     <h5 class="mt-3 mb-1 d-md-block">합계 :
                         <span class="h5 mb-0 text-lg font-weight-bolder text-primary text-gradient text-uppercase"
-                            id="totalPriceDisplay" th:text="${#numbers.formatCurrency(0)}">
+                              id="totalPriceDisplay" th:text="${#numbers.formatCurrency(0)}">
                         </span>
                     </h5>
                 </div>
@@ -100,7 +181,8 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-8">
                         <form action="#" method="get" th:action="@{/order/form}" id="shoppingBagIdArrayForm">
-                            <button type="button" id="orderBtn" class="btn bg-gradient-primary btn-lg w-100">주문하기</button>
+                            <button type="button" id="orderBtn" class="btn bg-gradient-primary btn-lg w-100">주문하기
+                            </button>
                         </form>
                     </div>
                 </div>
@@ -109,13 +191,12 @@
 
         </div>
     </div>
-
 </div>
 
 
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
-<script>
+<script th:if="${standByList.size() > 0}">
     (function () {
         document.querySelector('#orderBtn').onclick = function () {
             let idArray = [];
@@ -129,7 +210,7 @@
             });
 
             if (idArray.length === 0) {
-                alert('체크된 장바구니 물품이 없습니다.');
+                alert('선택된 장바구니 물품이 없습니다.');
             } else {
                 /* 여기서 부터 작업 시작 */
                 const form = document.querySelector('#shoppingBagIdArrayForm');
@@ -144,11 +225,11 @@
         };
     }());
 </script>
-<script th:inline="javascript">
+<script th:if="${standByList.size() > 0}" th:inline="javascript">
     (function () {
 
         /*<![CDATA[*/
-        let shoppingBagList = /*[[ ${shoppingBagList} ]]*/;
+        let shoppingBagList = /*[[ ${standByList} ]]*/;
         /*]]*/
 
         let totalPrice = 0;
@@ -202,7 +283,7 @@
 
     }());
 </script>
-<script>
+<script th:if="${standByList.size() > 0}">
     function removeItem(productId) {
 
         const csrfHeader = document.querySelector('#_csrf_header').content;
